--- a/src/main/resources/templates/user/resume/resume_preview.html
+++ b/src/main/resources/templates/user/resume/resume_preview.html
@@ -19,7 +19,7 @@
 					<div class="contact-info">
 						<div class="contact-item" th:text="${user.email}"></div>
 						<div class="phone-birth">
-							<span th:text="${user.phone}">01091205456</span> <span
+							<span th:text="|📞${user.phone}|">01091205456</span> <span
 								th:text="|📅${user.birth}년생|"></span>
 						</div>
 					</div>
