--- a/src/main/resources/templates/fragments/corpHeader.html
+++ b/src/main/resources/templates/fragments/corpHeader.html
@@ -74,7 +74,7 @@
 	        <td>
 	          <div class="corp-submenu-item">
 	            <a th:href="@{/corp/jobPostingForm}"><span class="corp-submenu-link">새로운 공고 등록</span></a> <br>
-	            <span class="corp-submenu-link">구인 공고 목록</span><br>
+	            <a th:href="@{/corp/myJobPostingList}"><span class="corp-submenu-link">나의 공고 목록</span></a> <br>
 	          </div>
 	        </td>
 	        <td>
