--- a/src/main/resources/templates/user/job_posting/job_posting_detail.html
+++ b/src/main/resources/templates/user/job_posting/job_posting_detail.html
@@ -196,12 +196,12 @@ $(document).ready(function () {
 
                 </div>
                 <div>
-                    <h2>급여</h2>
+                    <h2>평균 연봉</h2>
                     <p>3,000~4,500만원</p>
                 </div>
                 <div>
                     <h2>근무형태</h2>
-                    <p>정규직</p>
+                    <p th:text="${jDto.employType}">근무형태</p>
                 </div>
             </div>
 
